# goit-pythonweb-hw-012

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 4d480c805746_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_utils.py  test_intergation_contacts.py  test_intergation_users.py  test_user_repository_unit.py
